selfhost/test/typechecker/import/error_no_file_exists.out
Error at %FILE_NAME%:1:17
Could not import module
  |  import foo from "./huh"
                     ^
No file exists at path '/Users/kengorab/Desktop/abra-lang/selfhost/test/typechecker/import/huh.abra'
